fix table on mobile view

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -134,6 +134,9 @@ header {
     border-collapse: collapse;
     display: table;
     width: 100%;
+    @media (max-width: 996px) {
+      display: block;
+    }
   }
   h2 {
     --ifm-h2-font-size: 1.75rem;
